<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:padding="16dp"
    tools:context=".speedMaths">

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textColor="@android:color/black"
        android:freezesText="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/numberOfQuestionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1_x"
        android:textColor="@android:color/black"
        android:layout_below="@id/scoreText"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textColor="@android:color/black"
        android:layout_below="@id/numberOfQuestionsText"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/_00_30"
        android:textColor="@android:color/black"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:freezesText="true"
        tools:ignore="RelativeOverlap" />


    <TextView
        android:id="@+id/questionsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/question_text"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:freezesText="true"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionsText"
        android:layout_marginTop="50dp">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/option_1"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/option_2"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/option_3"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/option_4"
            android:freezesText="true"/>


    </RadioGroup>
    
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/radio_group"
        android:freezesText="true"/>

</RelativeLayout>