<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:padding="16dp"
    tools:context=".speedMathsInstructions">

    <TextView
        android:id="@+id/instructionsWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text= "@string/instructions"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@id/instructionsWord"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/speed_maths_instructions_text"/>

    <TextView
        android:id="@+id/highScoresText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@id/instructionsText"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/highscore_0"/>

    <Spinner
        android:id="@+id/spinnerDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/highScoresText"
        android:scrollbarSize="25sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="25sp"
        android:layout_below="@id/spinnerDifficulty"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="25sp"
        android:layout_below="@id/startButton"
        android:layout_marginTop="10dp"/>



</RelativeLayout>