<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:padding="16dp"
    tools:context=".shakeTheRightAnswer">

    <TextView
        android:id="@+id/shakeScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:freezesText="true"/>


<!--Delete after-->
    <TextView
        android:id="@+id/equationStatement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiples_of_3"
        android:textSize="36sp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/_01_00"
        android:textColor="@android:color/black"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:freezesText="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/showArrayList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/_0"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/equationStatement"
        android:layout_marginTop="100dp"/>

</RelativeLayout>