<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".categoriesPage">

    <TextView
        android:id="@+id/categoriesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/categories"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/numbersImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toStartOf="@+id/timerImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoriesText"
        app:srcCompat="@drawable/numbers"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/numbersButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/shake_the_right_number"
        app:layout_constraintEnd_toStartOf="@+id/timerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbersImage" />

    <ImageView
        android:id="@+id/timerImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numbersImage"
        app:layout_constraintTop_toBottomOf="@+id/categoriesText"
        app:srcCompat="@drawable/timer"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/timerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/speed_maths"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numbersButton"
        app:layout_constraintTop_toBottomOf="@+id/timerImage" />


</androidx.constraintlayout.widget.ConstraintLayout>